--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SecondActivity">
 
     <ImageView
         android:id="@+id/birdImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/bird_image"
         android:src="@drawable/bird_image"
+        android:transitionName="birdimage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,11 +22,12 @@
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/user_name"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/birdImage"
-        app:layout_constraintStart_toEndOf="@+id/birdImage"
-        app:layout_constraintTop_toTopOf="@+id/birdImage" />
+        android:textSize="24sp"
+        android:transitionName="username"
+        app:layout_constraintEnd_toEndOf="@+id/birdImage"
+        app:layout_constraintStart_toStartOf="@+id/birdImage"
+        app:layout_constraintTop_toBottomOf="@+id/birdImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
